# rust-axum-wep-app

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: mod.rs  task.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs
crates/libs/lib-rpc/src/rpcs/: mod.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
web-folder/: index.html
