[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# [lints]
# workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#serde_with = { workspace = true }
serde_with = "3"
# -- Data
sqlx = { version = "0.7", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sqlb = "0.4.0"
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
modql = { workspace = true }
# -- Tracing
tracing = "0.1"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = { workspace = true }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3.0.0"